De klasse Caller is voorzien van commentaar bij de methodes die er  al waren Ook heb ik een testklasse CallerTest aangemaakt om de constructor te testen
git-svn-id: file:///home/kommusoft/tmpgit/swopsvn@16 c49496ef-df08-40b3-bdd7-5dbf4c3ba35c

--- a/ProjectSWOP20102011/nbproject/project.properties
+++ b/ProjectSWOP20102011/nbproject/project.properties
@@ -4,6 +4,8 @@ annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=ProjectSWOP20102011
+application.vendor=Pieter-Jan
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -25,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/ProjectSWOP20102011.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.junit-4.8.2.jar=C:\\Jar_Files_Voor_Java_Programma's\\junit-4.8.2.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.junit-4.8.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -66,7 +70,7 @@ run.classpath=\
 run.jvmargs=
 run.test.classpath=\
     ${javac.test.classpath}:\
-    ${build.test.classes.dir}
+    ${build.test.classes.dir}:${file.reference.emma.jar}
 source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
