--- a/ProjectSWOP20102011/nbproject/project.properties
+++ b/ProjectSWOP20102011/nbproject/project.properties
@@ -44,7 +44,7 @@ javac.test.classpath=\
     ${libs.junit_4.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
-javadoc.additionalparam=-tag invar:a:"Invariant:"
+javadoc.additionalparam=javadoc -taglet be.kuleuven.cs.som.taglet.InvarTaglet -taglet be.kuleuven.cs.som.taglet.PreTaglet -taglet be.kuleuven.cs.som.taglet.PostTaglet -taglet be.kuleuven.cs.som.taglet.EffectTaglet -taglet be.kuleuven.cs.som.taglet.NoteTaglet -tagletpath /home/jonas/NetBeansProjects/ogpdoc.jar
 javadoc.author=true
 javadoc.encoding=${source.encoding}
 javadoc.noindex=false
@@ -55,6 +55,12 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jnlp.codebase.type=local
+jnlp.codebase.url=file:/home/jonas/NetBeansProjects/ProjectSWOP20102011/dist/
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.offline-allowed=false
+jnlp.signed=false
 main.class=projectswop20102011.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
