Emergency, GPSCoordinate uitgewerkt. Extra testen geschreven.
git-svn-id: file:///home/kommusoft/tmpgit/swopsvn@24 c49496ef-df08-40b3-bdd7-5dbf4c3ba35c

--- a/ProjectSWOP20102011/nbproject/coverage.properties
+++ b/ProjectSWOP20102011/nbproject/coverage.properties
@@ -1,6 +1,6 @@
 #coverage viewer module properties for project
-#Mon Oct 18 09:59:09 CEST 2010
-coverage.activity=OFF
+#Mon Oct 18 14:27:42 CEST 2010
+coverage.activity=ON
 project.type=java
-coverage.coverageFile=coverage/coverage.emma
 coverage.templateFile=coverage/template.emma
+coverage.coverageFile=coverage/coverage.emma
