De klasse operatorList toegevoegd + testen.
git-svn-id: file:///home/kommusoft/tmpgit/swopsvn@26 c49496ef-df08-40b3-bdd7-5dbf4c3ba35c

--- a/ProjectSWOP20102011/nbproject/coverage.properties
+++ b/ProjectSWOP20102011/nbproject/coverage.properties
@@ -1,6 +1,6 @@
 #coverage viewer module properties for project
-#Mon Oct 18 23:13:11 CEST 2010
-coverage.activity=ON
+#Tue Oct 19 20:04:49 CEST 2010
+coverage.activity=OFF
 project.type=java
-coverage.templateFile=coverage/template.emma
 coverage.coverageFile=coverage/coverage.emma
+coverage.templateFile=coverage/template.emma
