--- a/ProjectSWOP20102011/nbproject/project.properties
+++ b/ProjectSWOP20102011/nbproject/project.properties
@@ -1,7 +1,5 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
-annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=ProjectSWOP20102011
@@ -26,6 +24,7 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/ProjectSWOP20102011.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 includes=**
 jar.compress=false
@@ -35,8 +34,8 @@ javac.compilerargs=
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.5
-javac.target=1.5
+javac.source=1.6
+javac.target=1.6
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
@@ -73,7 +72,7 @@ run.classpath=\
 run.jvmargs=
 run.test.classpath=\
     ${javac.test.classpath}:\
-    ${build.test.classes.dir}:${file.reference.emma.jar}
+    ${build.test.classes.dir}
 source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
