--- a/ProjectSWOP20102011/nbproject/coverage.properties
+++ b/ProjectSWOP20102011/nbproject/coverage.properties
@@ -1,6 +1,6 @@
 #coverage viewer module properties for project
-#Tue Oct 19 20:04:49 CEST 2010
-coverage.activity=OFF
+#Fri Oct 22 22:26:24 CEST 2010
+coverage.activity=ON
 project.type=java
-coverage.coverageFile=coverage/coverage.emma
 coverage.templateFile=coverage/template.emma
+coverage.coverageFile=coverage/coverage.emma
