Elke emergency heeft nu een valid id, als er geen id meegegeven is wordt er één gemaakt. Er bestaat nu ook een InvalidEmergencyException. De kinderen van emergency zijn gemaakt en getest. Ook is er een enum FireSize gemaakt.
git-svn-id: file:///home/kommusoft/tmpgit/swopsvn@41 c49496ef-df08-40b3-bdd7-5dbf4c3ba35c

--- a/ProjectSWOP20102011/nbproject/project.properties
+++ b/ProjectSWOP20102011/nbproject/project.properties
@@ -42,7 +42,7 @@ javac.test.classpath=\
     ${libs.junit_4.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
-javadoc.additionalparam=javadoc -taglet be.kuleuven.cs.som.taglet.InvarTaglet -taglet be.kuleuven.cs.som.taglet.PreTaglet -taglet be.kuleuven.cs.som.taglet.PostTaglet -taglet be.kuleuven.cs.som.taglet.EffectTaglet -taglet be.kuleuven.cs.som.taglet.NoteTaglet -tagletpath /home/jonas/NetBeansProjects/ogpdoc.jar
+javadoc.additionalparam=-taglet be.kuleuven.cs.som.taglet.InvarTaglet -taglet be.kuleuven.cs.som.taglet.PreTaglet -taglet be.kuleuven.cs.som.taglet.PostTaglet -taglet be.kuleuven.cs.som.taglet.EffectTaglet -taglet be.kuleuven.cs.som.taglet.NoteTaglet -tagletpath /home/jonas/NetBeansProjects/ogpdoc.jar
 javadoc.author=true
 javadoc.encoding=${source.encoding}
 javadoc.noindex=false
