Een setter geschreven voor het attribuut emergencyList van de klasse world. Het staat niet final, dus kmocht da doen? Kheb ze ook gedocumenteerd. Kheb ook een klassendiagram gemaakt. Alleen ben ik nog altijd niet zo goed mee rond het "gebied" Maincontroller, OperatorController, World. Kheb het op het gevoel gedaan. Zou er dan iemand kunnen bevestigen wa er juist of fout is (als ge tijd hebt natuurlijk). Kan dan ook aan de sequence diagrams beginnen. Als het goed is, zal ik nog een beetje documenteren waar nodig in de verschillende klassen.
git-svn-id: file:///home/kommusoft/tmpgit/swopsvn@44 c49496ef-df08-40b3-bdd7-5dbf4c3ba35c

--- a/ProjectSWOP20102011/nbproject/coverage.properties
+++ b/ProjectSWOP20102011/nbproject/coverage.properties
@@ -1,6 +1,6 @@
 #coverage viewer module properties for project
-#Sat Oct 23 11:22:35 CEST 2010
-coverage.activity=ON
+#Sat Oct 23 15:26:20 CEST 2010
+coverage.activity=OFF
 project.type=java
-coverage.templateFile=coverage/template.emma
 coverage.coverageFile=coverage/coverage.emma
+coverage.templateFile=coverage/template.emma
