--- a/ProjectSWOP20102011/UML/nbproject/private/private.properties
+++ b/ProjectSWOP20102011/UML/nbproject/private/private.properties
@@ -1,1 +1,1 @@
-user.properties.file=/home/jonas/.netbeans/6.7/build.properties
+user.properties.file=C:\\Users\\Pieter-Jan\\.netbeans\\6.7\\build.properties
