--- a/ProjectSWOP20102011/nbproject/coverage.properties
+++ b/ProjectSWOP20102011/nbproject/coverage.properties
@@ -1,5 +1,5 @@
 #coverage viewer module properties for project
-#Fri Oct 29 10:57:30 CEST 2010
+#Sun Oct 31 17:47:15 CET 2010
 coverage.activity=OFF
 project.type=java
 coverage.coverageFile=coverage/coverage.emma
