--- a/ProjectSWOP20102011/nbproject/coverage.properties
+++ b/ProjectSWOP20102011/nbproject/coverage.properties
@@ -1,6 +1,6 @@
 #coverage viewer module properties for project
-#Wed Nov 03 00:25:24 CET 2010
-coverage.activity=ON
+#Wed Nov 03 03:48:16 CET 2010
+coverage.activity=OFF
 project.type=java
-coverage.templateFile=coverage/template.emma
 coverage.coverageFile=coverage/coverage.emma
+coverage.templateFile=coverage/template.emma
