Constructor van units veranderd en een assignTo toegevoegd.
git-svn-id: file:///home/kommusoft/tmpgit/swopsvn@99 c49496ef-df08-40b3-bdd7-5dbf4c3ba35c

--- a/ProjectSWOP20102011/nbproject/coverage.properties
+++ b/ProjectSWOP20102011/nbproject/coverage.properties
@@ -1,6 +1,6 @@
 #coverage viewer module properties for project
-#Wed Nov 03 03:48:16 CET 2010
-coverage.activity=OFF
+#Thu Nov 04 15:14:41 CET 2010
+coverage.activity=ON
 project.type=java
-coverage.coverageFile=coverage/coverage.emma
 coverage.templateFile=coverage/template.emma
+coverage.coverageFile=coverage/coverage.emma
