Sommige todo's opgelost.
git-svn-id: file:///home/kommusoft/tmpgit/swopsvn@104 c49496ef-df08-40b3-bdd7-5dbf4c3ba35c

--- a/ProjectSWOP20102011/nbproject/coverage.properties
+++ b/ProjectSWOP20102011/nbproject/coverage.properties
@@ -1,6 +1,6 @@
 #coverage viewer module properties for project
-#Thu Nov 04 15:14:41 CET 2010
-coverage.activity=ON
+#Fri Nov 05 10:56:18 CET 2010
+coverage.activity=OFF
 project.type=java
-coverage.templateFile=coverage/template.emma
 coverage.coverageFile=coverage/coverage.emma
+coverage.templateFile=coverage/template.emma
