Het rapport is nu opgesplitst in 6 bestanden. Elk bestand is één sectie en alle bestanden worden gelinkt in report_iteration1.tex.  Dus normaal kunnen we nu geen overlappingen hebben.
git-svn-id: file:///home/kommusoft/tmpgit/swopsvn@107 c49496ef-df08-40b3-bdd7-5dbf4c3ba35c

--- a/ProjectSWOP20102011/nbproject/coverage.properties
+++ b/ProjectSWOP20102011/nbproject/coverage.properties
@@ -1,6 +1,6 @@
 #coverage viewer module properties for project
-#Fri Nov 05 13:01:29 CET 2010
-coverage.activity=ON
+#Fri Nov 05 13:54:43 CET 2010
+coverage.activity=OFF
 project.type=java
-coverage.templateFile=coverage/template.emma
 coverage.coverageFile=coverage/coverage.emma
+coverage.templateFile=coverage/template.emma
