--- a/ProjectSWOP20102011/nbproject/coverage.properties
+++ b/ProjectSWOP20102011/nbproject/coverage.properties
@@ -1,6 +1,6 @@
 #coverage viewer module properties for project
-#Fri Nov 05 13:54:43 CET 2010
-coverage.activity=OFF
+#Sat Nov 06 13:15:23 CET 2010
+coverage.activity=ON
 project.type=java
-coverage.coverageFile=coverage/coverage.emma
 coverage.templateFile=coverage/template.emma
+coverage.coverageFile=coverage/coverage.emma
