Opmerkingetjes van Willem doorgevoerd. Geen try-catch meer bij de timeAhead en de isAssignableFrom wordt nu gebruikt.
git-svn-id: file:///home/kommusoft/tmpgit/swopsvn@116 c49496ef-df08-40b3-bdd7-5dbf4c3ba35c

--- a/ProjectSWOP20102011/nbproject/coverage.properties
+++ b/ProjectSWOP20102011/nbproject/coverage.properties
@@ -1,6 +1,6 @@
 #coverage viewer module properties for project
-#Sat Nov 06 18:12:37 CET 2010
-coverage.activity=ON
+#Sun Nov 07 09:39:06 CET 2010
+coverage.activity=OFF
 project.type=java
-coverage.templateFile=coverage/template.emma
 coverage.coverageFile=coverage/coverage.emma
+coverage.templateFile=coverage/template.emma
