--- a/ProjectSWOP20102011/nbproject/coverage.properties
+++ b/ProjectSWOP20102011/nbproject/coverage.properties
@@ -1,6 +1,6 @@
 #coverage viewer module properties for project
-#Sun Nov 07 09:39:06 CET 2010
-coverage.activity=OFF
+#Tue Nov 09 02:26:10 CET 2010
+coverage.activity=ON
 project.type=java
-coverage.coverageFile=coverage/coverage.emma
 coverage.templateFile=coverage/template.emma
+coverage.coverageFile=coverage/coverage.emma
