Format van Exception klassen
git-svn-id: file:///home/kommusoft/tmpgit/swopsvn@170 c49496ef-df08-40b3-bdd7-5dbf4c3ba35c

--- a/ProjectSWOP20102011/nbproject/coverage.properties
+++ b/ProjectSWOP20102011/nbproject/coverage.properties
@@ -1,6 +1,6 @@
 #coverage viewer module properties for project
-#Tue Nov 09 02:26:10 CET 2010
-coverage.activity=ON
+#Tue Nov 09 03:41:42 CET 2010
+coverage.activity=OFF
 project.type=java
-coverage.templateFile=coverage/template.emma
 coverage.coverageFile=coverage/coverage.emma
+coverage.templateFile=coverage/template.emma
