Voorstel om het external systeem te implementeren (implementatie gebeurt vannamiddag/vanavond)
git-svn-id: file:///home/kommusoft/tmpgit/swopsvn@223 c49496ef-df08-40b3-bdd7-5dbf4c3ba35c

--- a/ProjectSWOP20102011/nbproject/project.properties
+++ b/ProjectSWOP20102011/nbproject/project.properties
@@ -26,10 +26,12 @@ dist.jar=${dist.dir}/ProjectSWOP20102011.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.ExternalSystem.jar=/home/jonas/NetBeansProjects/Java/ExternalSystem.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.junit_4.classpath}
+    ${libs.junit_4.classpath}:\
+    ${file.reference.ExternalSystem.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
