--- a/ProjectSWOP20102011/nbproject/project.properties
+++ b/ProjectSWOP20102011/nbproject/project.properties
@@ -27,11 +27,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.ExternalSystem.jar=/home/jonas/NetBeansProjects/Java/ExternalSystem.jar
+file.reference.ExternalSystem.jar-1=/home/willem/Documenten/Unief/Bachelor3/Software_ontwerpen/project/ExternalSystem.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.junit_4.classpath}:\
-    ${file.reference.ExternalSystem.jar}
+    ${file.reference.ExternalSystem.jar}:\
+    ${file.reference.ExternalSystem.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
