Als ik update bij een commit van jullie, verdwijnt den jar (external system) da ik heb toegevoegd uit de lijst. En krijgk ik dus een paar errors. Als jullie nu updaten bij mijn commit, ebt ge da probleem ton wok?
git-svn-id: file:///home/kommusoft/tmpgit/swopsvn@225 c49496ef-df08-40b3-bdd7-5dbf4c3ba35c

--- a/ProjectSWOP20102011/nbproject/project.properties
+++ b/ProjectSWOP20102011/nbproject/project.properties
@@ -26,14 +26,13 @@ dist.jar=${dist.dir}/ProjectSWOP20102011.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.ExternalSystem.jar=/home/jonas/NetBeansProjects/Java/ExternalSystem.jar
+file.reference.ExternalSystem.jar=C:\\Jar_Files_Voor_Java_Programma's\\ExternalSystem.jar
 file.reference.ExternalSystem.jar-1=/home/willem/Documenten/Unief/Bachelor3/Software_ontwerpen/project/ExternalSystem.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.junit_4.classpath}:\
-    ${file.reference.ExternalSystem.jar}:\
-    ${file.reference.ExternalSystem.jar-1}
+    ${file.reference.ExternalSystem.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
