--- a/ProjectSWOP20102011/nbproject/project.properties
+++ b/ProjectSWOP20102011/nbproject/project.properties
@@ -28,11 +28,13 @@ endorsed.classpath=
 excludes=
 file.reference.ExternalSystem.jar=C:\\Jar_Files_Voor_Java_Programma's\\ExternalSystem.jar
 file.reference.ExternalSystem.jar-1=/home/willem/Documenten/Unief/Bachelor3/Software_ontwerpen/project/ExternalSystem.jar
+file.reference.ExternalSystem.jar-2=/home/jonas/NetBeansProjects/Java/ExternalSystem.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.junit_4.classpath}:\
-    ${file.reference.ExternalSystem.jar}
+    ${file.reference.ExternalSystem.jar}:\
+    ${file.reference.ExternalSystem.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
