het extern systeem moet nu included zijn in de commit (jar zit in de project folder)+naamwijziging FiretruckValidator -> FiretruckFireSizeValidator
git-svn-id: file:///home/kommusoft/tmpgit/swopsvn@227 c49496ef-df08-40b3-bdd7-5dbf4c3ba35c

--- a/ProjectSWOP20102011/nbproject/project.properties
+++ b/ProjectSWOP20102011/nbproject/project.properties
@@ -34,7 +34,8 @@ jar.compress=false
 javac.classpath=\
     ${libs.junit_4.classpath}:\
     ${file.reference.ExternalSystem.jar}:\
-    ${file.reference.ExternalSystem.jar-2}
+    ${file.reference.ExternalSystem.jar-2}:\
+    ${file.reference.ExternalSystem.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
