--- a/ProjectSWOP20102011/nbproject/project.properties
+++ b/ProjectSWOP20102011/nbproject/project.properties
@@ -49,7 +49,7 @@ javac.test.classpath=\
     ${libs.junit_4.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
-javadoc.additionalparam=-taglet be.kuleuven.cs.som.taglet.InvarTaglet -taglet be.kuleuven.cs.som.taglet.PreTaglet -taglet be.kuleuven.cs.som.taglet.PostTaglet -taglet be.kuleuven.cs.som.taglet.EffectTaglet -taglet be.kuleuven.cs.som.taglet.NoteTaglet -tagletpath /home/jonas/NetBeansProjects/ogpdoc.jar
+javadoc.additionalparam=-taglet be.kuleuven.cs.som.taglet.InvarTaglet -taglet be.kuleuven.cs.som.taglet.PreTaglet -taglet be.kuleuven.cs.som.taglet.PostTaglet -taglet be.kuleuven.cs.som.taglet.EffectTaglet -taglet be.kuleuven.cs.som.taglet.NoteTaglet -tagletpath ogpdoc.jar
 javadoc.author=true
 javadoc.encoding=${source.encoding}
 javadoc.noindex=false
