UnitsNeeded is state onafhankelijk en beter geincapsuleerd (moeten hiervoor nog oplossingen zoeken). Verder is het verslag verder geevolueerd. Eventueel moeten nog extra checks op de overgangen gezet worden.
git-svn-id: file:///home/kommusoft/tmpgit/swopsvn@318 c49496ef-df08-40b3-bdd7-5dbf4c3ba35c

--- a/ProjectSWOP20102011/nbproject/project.properties
+++ b/ProjectSWOP20102011/nbproject/project.properties
@@ -29,13 +29,15 @@ excludes=
 file.reference.ExternalSystem.jar=C:\\Jar_Files_Voor_Java_Programma's\\ExternalSystem.jar
 file.reference.ExternalSystem.jar-1=/home/willem/Documenten/Unief/Bachelor3/Software_ontwerpen/project/ExternalSystem.jar
 file.reference.ExternalSystem.jar-2=/home/jonas/NetBeansProjects/Java/ExternalSystem.jar
+file.reference.ExternalSystem.jar-3=ExternalSystem.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.junit_4.classpath}:\
     ${file.reference.ExternalSystem.jar}:\
     ${file.reference.ExternalSystem.jar-2}:\
-    ${file.reference.ExternalSystem.jar-1}
+    ${file.reference.ExternalSystem.jar-1}:\
+    ${file.reference.ExternalSystem.jar-3}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -59,7 +61,7 @@ javadoc.private=false
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
-javadoc.windowtitle=
+javadoc.windowtitle=Project SWOP 2010-2011 Iteratie 2
 jnlp.codebase.type=local
 jnlp.codebase.url=file:/home/jonas/NetBeansProjects/ProjectSWOP20102011/dist/
 jnlp.descriptor=application
