--- a/ProjectSWOP20102011/nbproject/coverage.properties
+++ b/ProjectSWOP20102011/nbproject/coverage.properties
@@ -1,6 +1,6 @@
 #coverage viewer module properties for project
-#Sun Dec 05 16:21:57 CET 2010
-coverage.activity=OFF
+#Tue Dec 21 01:11:00 CET 2010
+coverage.activity=ON
 project.type=java
-coverage.coverageFile=coverage/coverage.emma
 coverage.templateFile=coverage/template.emma
+coverage.coverageFile=coverage/coverage.emma
