ExternalSystem wat gemoved
git-svn-id: file:///home/kommusoft/tmpgit/swopsvn@389 c49496ef-df08-40b3-bdd7-5dbf4c3ba35c

--- a/ProjectSWOP20102011/nbproject/project.properties
+++ b/ProjectSWOP20102011/nbproject/project.properties
@@ -26,18 +26,12 @@ dist.jar=${dist.dir}/ProjectSWOP20102011.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.ExternalSystem.jar=C:\\Jar_Files_Voor_Java_Programma's\\ExternalSystem.jar
-file.reference.ExternalSystem.jar-1=/home/willem/Documenten/Unief/Bachelor3/Software_ontwerpen/project/ExternalSystem.jar
 file.reference.ExternalSystem.jar-2=/home/jonas/NetBeansProjects/Java/ExternalSystem.jar
-file.reference.ExternalSystem.jar-3=ExternalSystem.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.junit_4.classpath}:\
-    ${file.reference.ExternalSystem.jar}:\
-    ${file.reference.ExternalSystem.jar-2}:\
-    ${file.reference.ExternalSystem.jar-1}:\
-    ${file.reference.ExternalSystem.jar-3}
+    ${file.reference.ExternalSystem.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -51,24 +45,24 @@ javac.test.classpath=\
     ${libs.junit_4.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
-javadoc.additionalparam=-taglet be.kuleuven.cs.som.taglet.InvarTaglet -taglet be.kuleuven.cs.som.taglet.PreTaglet -taglet be.kuleuven.cs.som.taglet.PostTaglet -taglet be.kuleuven.cs.som.taglet.EffectTaglet -taglet be.kuleuven.cs.som.taglet.NoteTaglet -tagletpath ogpdoc.jar
+javadoc.additionalparam=-taglet be.kuleuven.cs.som.taglet.InvarTaglet -taglet be.kuleuven.cs.som.taglet.PreTaglet -taglet be.kuleuven.cs.som.taglet.PostTaglet -taglet be.kuleuven.cs.som.taglet.EffectTaglet -taglet be.kuleuven.cs.som.taglet.NoteTaglet -tagletpath /home/jonas/NetBeansProjects/Java/ogpdoc.jar
 javadoc.author=true
 javadoc.encoding=${source.encoding}
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
-javadoc.private=false
+javadoc.private=true
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
-javadoc.windowtitle=Project SWOP 2010-2011 Iteratie 2
+javadoc.windowtitle=
 jnlp.codebase.type=local
 jnlp.codebase.url=file:/home/jonas/NetBeansProjects/ProjectSWOP20102011/dist/
 jnlp.descriptor=application
 jnlp.enabled=false
 jnlp.offline-allowed=false
 jnlp.signed=false
-main.class=projectswop20102011.domain.Main
+main.class=projectswop20102011.externalsystem.NewMain
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 platform.active=default_platform
@@ -81,7 +75,7 @@ run.classpath=\
 run.jvmargs=
 run.test.classpath=\
     ${javac.test.classpath}:\
-    ${build.test.classes.dir}
+    ${build.test.classes.dir}:${file.reference.emma.jar}
 source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
