--- a/ProjectSWOP20102011/nbproject/project.properties
+++ b/ProjectSWOP20102011/nbproject/project.properties
@@ -26,12 +26,14 @@ dist.jar=${dist.dir}/ProjectSWOP20102011.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.ExternalSystem.jar=ExternalSystem.jar
 file.reference.ExternalSystem.jar-2=/home/jonas/NetBeansProjects/Java/ExternalSystem.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.junit_4.classpath}:\
-    ${file.reference.ExternalSystem.jar-2}
+    ${file.reference.ExternalSystem.jar-2}:\
+    ${file.reference.ExternalSystem.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -62,7 +64,7 @@ jnlp.descriptor=application
 jnlp.enabled=false
 jnlp.offline-allowed=false
 jnlp.signed=false
-main.class=projectswop20102011.externalsystem.NewMain
+main.class=projectswop20102011.main.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 platform.active=default_platform
@@ -75,7 +77,8 @@ run.classpath=\
 run.jvmargs=
 run.test.classpath=\
     ${javac.test.classpath}:\
-    ${build.test.classes.dir}:${file.reference.emma.jar}
+    ${build.test.classes.dir}:\
+    ${file.reference.emma.jar}
 source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
