Verslag is bijna af. :)
git-svn-id: file:///home/kommusoft/tmpgit/swopsvn@452 c49496ef-df08-40b3-bdd7-5dbf4c3ba35c

--- a/ProjectSWOP20102011/nbproject/project.properties
+++ b/ProjectSWOP20102011/nbproject/project.properties
@@ -27,12 +27,10 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.ExternalSystem.jar=ExternalSystem.jar
-file.reference.ExternalSystem.jar-2=/home/jonas/NetBeansProjects/Java/ExternalSystem.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.junit_4.classpath}:\
-    ${file.reference.ExternalSystem.jar-2}:\
     ${file.reference.ExternalSystem.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
@@ -77,8 +75,7 @@ run.classpath=\
 run.jvmargs=
 run.test.classpath=\
     ${javac.test.classpath}:\
-    ${build.test.classes.dir}:\
-    ${file.reference.emma.jar}
+    ${build.test.classes.dir}
 source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
