Tussentijdse commit over disaster/emergency en unitsneeded.
git-svn-id: file:///home/kommusoft/tmpgit/swopsvn@601 c49496ef-df08-40b3-bdd7-5dbf4c3ba35c

--- a/ProjectSWOP20102011/nbproject/project.properties
+++ b/ProjectSWOP20102011/nbproject/project.properties
@@ -28,7 +28,9 @@ endorsed.classpath=
 excludes=
 file.reference.ExternalSystem.jar=ExternalSystem.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.junit_4.classpath}:\
     ${file.reference.ExternalSystem.jar}
@@ -42,7 +44,8 @@ javac.target=1.6
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${libs.junit_4.classpath}
+    ${libs.junit_4.classpath}:\
+    ${file.reference.ExternalSystem.jar}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=-taglet be.kuleuven.cs.som.taglet.InvarTaglet -taglet be.kuleuven.cs.som.taglet.PreTaglet -taglet be.kuleuven.cs.som.taglet.PostTaglet -taglet be.kuleuven.cs.som.taglet.EffectTaglet -taglet be.kuleuven.cs.som.taglet.NoteTaglet -tagletpath /home/jonas/NetBeansProjects/Java/ogpdoc.jar
@@ -60,6 +63,7 @@ jnlp.codebase.type=local
 jnlp.codebase.url=file:/home/jonas/NetBeansProjects/ProjectSWOP20102011/dist/
 jnlp.descriptor=application
 jnlp.enabled=false
+jnlp.mixed.code=defaut
 jnlp.offline-allowed=false
 jnlp.signed=false
 main.class=projectswop20102011.main.Main
@@ -75,7 +79,8 @@ run.classpath=\
 run.jvmargs=
 run.test.classpath=\
     ${javac.test.classpath}:\
-    ${build.test.classes.dir}
+    ${build.test.classes.dir}:\
+    
 source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
