--- a/ProjectSWOP20102011/nbproject/coverage.properties
+++ b/ProjectSWOP20102011/nbproject/coverage.properties
@@ -1,5 +1,5 @@
 #coverage viewer module properties for project
-#Sun Mar 20 17:11:10 CET 2011
+#Thu May 12 13:18:38 CEST 2011
 coverage.activity=OFF
 project.type=java
 coverage.coverageFile=coverage/coverage.emma
