De eventhandlers zijn nu gebundeld.
git-svn-id: file:///home/kommusoft/tmpgit/swopsvn@808 c49496ef-df08-40b3-bdd7-5dbf4c3ba35c

--- a/ProjectSWOP20102011/nbproject/project.properties
+++ b/ProjectSWOP20102011/nbproject/project.properties
@@ -66,7 +66,7 @@ jnlp.enabled=false
 jnlp.mixed.code=defaut
 jnlp.offline-allowed=false
 jnlp.signed=false
-main.class=projectswop20102011.main.Main
+main.class=projectswop20102011.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 platform.active=default_platform
